@@ -35,6 +35,9 @@ Trunk -  Unreleased
     HIVE-764. Fixed json.jar. (Raghu Murthy via zshao)
 
     HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)
+    
+    HIVE-773. Remove lzocodec import from FileSinkOperator.
+    (He Yongqiang via johan)
 
 Release 0.4.0 -  Unreleased
 
